@@ -27,6 +27,7 @@ WARNING: Until version `1.0.0` there is a greater possibility of breaking change
 === `0.2.5` (in progress)
 
 - [ADD] Terse syntax alternatives for `span-opts` map parameter in `new-span!` and related functions that create spans.
+- [ADD] Convenience function `add-event!` to add an event to the bound or current span.
 
 === `0.2.4.1` (2023-10-01)
 
